# full-stack-dev

back-end/back-end-101/: frameworks_overview.md
back-end/back-end-101/final-project/: README.md  pyproject.toml
back-end/back-end-101/final-project/app/: main.py
back-end/back-end-101/lesson-2/: pyproject.toml
back-end/back-end-101/lesson-3/: pyproject.toml
back-end/back-end-101/lesson-5/: pyproject.toml
back-end/back-end-101/lesson-6/: app.py  pyproject.toml
back-end/back-end-101/lesson-7/: README.md  pyproject.toml
back-end/back-end-101/lesson-8/: pyproject.toml
back-end/back-end-101/lesson-8/app/: file.txt  main.py
back-end/back-end-101/lesson-9/: pyproject.toml
back-end/back-end-102/lesson-3/: pyproject.toml
back-end/back-end-102/lesson-3/app/: main.py
dev-core-101/: dev-core-101-compiled-or-interpreted.md  dev-core-101-exercises-python.py  dev-core-101-finalproject.py  dev-core-101-task-js.js  dev-core-101-task-python.py  dev-core-101-vs-code-bindings.md
dev-core/dev-core-101/: dev-core-101-basic-syntax.js  dev-core-101-basic-terms.js  dev-core-101-computer-specs.md  dev-core-101-exercises-js.js  dev-core-101-finalproject-plan.md  dev-core-101-industries-research.txt  dev-core-101-input-output-js.js  dev-core-101-programming-languages-timeline.txt  dev-core-101-task-js.js  dev-core-101-variables-js.js  dev-core-101-variables-python.py
dev-core/dev-core-102/: final_project.py  recipes.txt  task_10_file_handling.py  task_11_error_handling.py  task_12_algorithms_recipes.py  task_13_library_management.py  task_14_todo_app.py  task_1_clean_code_practice.py  task_2_data_structures.py  task_3_input_output.py  task_4_calculate_order.py  task_5_trip_advisor.py  task_6_discount_calculator.py  task_7_sports_statistics.py  task_8_recursive_navigation.py  task_9_recipe_management.py  user_info.txt
dev-core/dev-core-104/: commands_used.txt  final_project_commands_used.txt  variables_commands.txt  workflows_commands.txt  working_with_files_commands.txt
front-end/lesson-10-grid/: index.html  styles.css
front-end/lesson-6-spacing/: index.html
mvp-project/: README.md
mvp-project/backend/: app.py
(+234 files in other folders)
