[project]
name = "lesson-2"
version = "0.1.0"
description = "Back-end 101 lesson 2"
authors = [
    {name = "Ansar"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "inequality (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
