[tool.poetry]
name = "lesson-6"
version = "0.1.0"
description = "lesson-6"
authors = ["Ansar <issayevansar1@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.13"
numpy = "^1.21.0"
pandas = "^2.2.3"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
